[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Actors/SimpleEnemies/Spider/Bullet.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/SimpleEnemies/Spider/Bullet.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/SimpleEnemies/Spider/Bullet-explode.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 6, 6 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 6, 0, 6, 6 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 12, 0, 6, 6 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 6, 6 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 6, 0, 6, 6 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 12, 0, 6, 6 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 18, 0, 6, 6 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "explode",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 10.0499

[node name="Bullet" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "explode"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Hit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit"]
position = Vector2( 0, 7 )
shape = SubResource( 5 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Hit" to="." method="_on_Hit_body_entered"]
